--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
   "name": "vue-cli3-test-repo",
   "version": "0.1.0",
+  "description": "Frontend Vue.js eksempel på bruk av vue-cli3",
+  "author": "tinajen <tina.kristin.jensen@marcello.no>",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --mode development",
+    "build:test": "vue-cli-service build --mode test",
+    "build:systest": "vue-cli-service build --mode systest",
+    "build:prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-regular-svg-icons": "^5.7.1",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "es6-promise": "^4.2.6",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vue-i18n": "^8.8.0",
+    "vue-router": "^3.0.5",
+    "vue-truncate-filter": "^1.1.7",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
